# qt6

./: .kateproject  README.md  absint.patch  blockWithMarkerAt.patch  update.sh
docs/: qtcore.tags  qtgui.tags  qtnetwork.tags  qtwidgets.tags
src/: .gitmodules  .tag  init-repository.opt  init-repository.opt.in
src/coin/platform_configs/: cmake_platforms.yaml  cmake_platforms_static_release.yaml  cmake_platforms_static_tests.yaml  cmake_platforms_target_android.yaml  cmake_platforms_wasm.yaml  linux_android_tests_multi_abi.yaml  macos.yaml  precheck.yaml  (+12 more)
src/qt5compat/: .tag
src/qtactiveqt/: .cmake.conf  dependencies.yaml
src/qtbase/: .cmake.conf  .release-timestamp  .tag  config_help.txt  configure.bat  configure.cmake  licenseRule.json  qt_cmdline.cmake
src/qtdeclarative/: .cmake.conf  .tag  dependencies.yaml
src/qtdoc/: .tag
src/qtimageformats/: .cmake.conf  dependencies.yaml
src/qtlanguageserver/: .cmake.conf  dependencies.yaml
src/qtquick3d/: .tag
src/qtquickcontrols2/: .tag
src/qtquicktimeline/: .tag
src/qtshadertools/: .cmake.conf  .tag  dependencies.yaml
src/qtsvg/: .cmake.conf  .tag  dependencies.yaml
src/qttools/: .cmake.conf  .tag  configure.cmake  dependencies.yaml
src/qttools/examples/linguist/localizedclock-idbased/: CMakeLists.txt  Main.qml  dialog.cpp  dialog.h  dialog.ui  main.cpp  timezonemanager.cpp  timezonemanager.h
src/qttools/examples/linguist/localizedclock-idbased/i18n/: clock_ar.ts  clock_de.ts  clock_en.ts  clock_es.ts  clock_fr.ts  clock_it.ts  clock_ja.ts  clock_ko.ts  clock_pt.ts  clock_zh.ts
src/qttranslations/: .tag
src/qtwayland/: .cmake.conf  .tag  dependencies.yaml
(+858 files in other folders)
